--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Sample Starter ML Project
 author: Asier Abreu Aramburu
-logo: sample_starter_project_logo.png
+logo: pics/sample_starter_project_logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -16,8 +16,8 @@ latex:
     targetname: sample_starter_project.tex
 
 # Add a bibtex file so that we can create citations
-bibtex_bibfiles:
-  - references.bib
+#bibtex_bibfiles:
+#  - references.bib
 
 # Information about where the book exists on the web
 repository:
