--- a/_toc.yml
+++ b/_toc.yml
@@ -2,5 +2,5 @@
 format: jb-book
 root: docs/intro
 chapters:
-- file: docs/markdown-notebooks
-- file: docs/markdown-documentation
+- file: docs/sample-notebooks
+- file: docs/sample-documentation
